Added correct file to launch.json for more comfortable debugging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Python: Current File",
       "type": "python",
       "request": "launch",
-      "program": "${file}",
+      "program": "src/main.py",
       "console": "integratedTerminal",
       "gevent": true
     }
