--- a/res/DepotDownloader/DepotDownloader.runtimeconfig.json
+++ b/res/DepotDownloader/DepotDownloader.runtimeconfig.json
@@ -1,9 +1,9 @@
 {
   "runtimeOptions": {
-    "tfm": "netcoreapp2.0",
+    "tfm": "net5.0",
     "framework": {
       "name": "Microsoft.NETCore.App",
-      "version": "2.0.0"
+      "version": "5.0.0"
     },
     "rollForwardOnNoCandidateFx": 2
   }
