--- a/res/DepotDownloader/DepotDownloader.runtimeconfig.json
+++ b/res/DepotDownloader/DepotDownloader.runtimeconfig.json
@@ -1,10 +1,13 @@
 {
   "runtimeOptions": {
-    "tfm": "net5.0",
+    "tfm": "net6.0",
+    "rollForward": "LatestMajor",
     "framework": {
       "name": "Microsoft.NETCore.App",
-      "version": "5.0.0"
+      "version": "6.0.0"
     },
-    "rollForwardOnNoCandidateFx": 2
+    "configProperties": {
+      "System.Reflection.Metadata.MetadataUpdater.IsSupported": false
+    }
   }
 }
