--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-  "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true,
-  "python.linting.flake8Args": ["--ignore", "E111,E114,E501,E121,E722"]
+  "flake8.args": ["--ignore", "E111,E114,E501,E121,E722"]
 }
